<resources>
    <string name="app_name">CoroutinesExample</string>
    <string name="hello_world">Hello world, %1$s</string>
    <string name="login_one">Longin - one coroutine</string>
    <string name="login_two">Longin - two coroutines</string>
    <string name="login_three">Longin - three view model</string>
    <string name="you">you</string>
    <string name="todo">todo</string>
    <string name="server_response">Status server response: %1$s</string>
    <string name="heavy_task">Heavy task: %1$s</string>
    <string name="server_test">server test</string>
    <string name="heavy_task_test">heavy task test</string>
</resources>